--- a/midterm.Rmd
+++ b/midterm.Rmd
@@ -43,19 +43,27 @@ bucks_shots_full <- teams_shots(
   nest_data = F,
   return_message = T
 )
-```
-```{r}
+
 library(sportyR)
 
-bball_court <- geom_basketball("nba", display_range = "offense", rotation = 270, xlims = 248, ylims = 50)
+bball_court <- geom_basketball("nba", display_range = "offense", rotation = 270)
 
-bball_court + geom_point(data = bucks_shots, aes(locationX, locationY), color = "#2251b8")  
+bball_court + geom_point(data = bucks_shots, aes(locationX, locationY), color = "green") + scale_x_reverse()
+ 
 
+```
+```{r}
+bball_court <- geom_basketball("nba", display_range = "offense", rotation = 270) 
+
+
+bball_court + geom_point(data = bucks_shots, aes(locationX, locationY), color = "green") + scale_x_reverse()  
 ```
 
 ```{r}
-ggplot(bucks_shots, aes(x = locationX, y = locationY, color = factor(isShotMade))) +
-  geom_point() +
+bucks_shots <- bucks_shots_full %>% select("isShotMade", "locationX", "locationY")
+
+ ggplot(bucks_shots, aes(x = locationX, y = locationY, color = factor(isShotMade))) +
+  geom_point() + scale_x_reverse() +
   scale_color_manual(values = c("FALSE" = "red", "TRUE" = "green")) +  
   labs(
     title = "Milwaukee Bucks Shot Locations",
