--- a/midterm.Rmd
+++ b/midterm.Rmd
@@ -31,12 +31,12 @@ library(purrr)
 Sys.setenv("VROOM_CONNECTION_SIZE" = 131072 * 2)
 
 
-bucks_shots_23_unclean <- teams_shots(
+bucks_shots_24_unclean <- teams_shots(
   teams = "Milwaukee Bucks",
   team_ids = NULL,
   all_active_teams = F,
   season_types = "Regular Season",
-  seasons = 2023,
+  seasons = 2024,
   measures = "FGA",
   periods = 0,
   months = 0,
@@ -46,55 +46,7 @@ bucks_shots_23_unclean <- teams_shots(
   return_message = T
 )
 
-bucks_shots_23 <- bucks_shots_23_unclean %>% select("isShotMade", "locationX", "locationY", "yearSeason")
-
-bucks_shots_22_unclean <- teams_shots(
-  teams = "Milwaukee Bucks",
-  team_ids = NULL,
-  all_active_teams = F,
-  season_types = "Regular Season",
-  seasons = 2022,
-  measures = "FGA",
-  periods = 0,
-  months = 0,
-  date_from = NA,
-  date_to = NA,
-  nest_data = F,
-  return_message = T
-) 
-bucks_shots_22 <- bucks_shots_22_unclean %>% select("isShotMade", "locationX", "locationY", "yearSeason")
-
-bucks_shots_21_unclean <- teams_shots(
-  teams = "Milwaukee Bucks",
-  team_ids = NULL,
-  all_active_teams = F,
-  season_types = "Regular Season",
-  seasons = 2021,
-  measures = "FGA",
-  periods = 0,
-  months = 0,
-  date_from = NA,
-  date_to = NA,
-  nest_data = F,
-  return_message = T
-) 
-bucks_shots_21 <- bucks_shots_21_unclean %>% select("isShotMade", "locationX", "locationY", "yearSeason")
-
-bucks_shots_20_unclean <- teams_shots(
-  teams = "Milwaukee Bucks",
-  team_ids = NULL,
-  all_active_teams = F,
-  season_types = "Regular Season",
-  seasons = 2020,
-  measures = "FGA",
-  periods = 0,
-  months = 0,
-  date_from = NA,
-  date_to = NA,
-  nest_data = F,
-  return_message = T
-) 
-bucks_shots_20 <- bucks_shots_20_unclean %>% select("isShotMade", "locationX", "locationY", "yearSeason")
+bucks_shots_24 <- bucks_shots_24_unclean %>% select("isShotMade", "locationX", "locationY", "yearSeason")
 
 bucks_shots_19_unclean <- teams_shots(
   teams = "Milwaukee Bucks",
@@ -112,12 +64,12 @@ bucks_shots_19_unclean <- teams_shots(
 ) 
 bucks_shots_19 <- bucks_shots_19_unclean %>% select("isShotMade", "locationX", "locationY", "yearSeason")
 
-bucks_shots_18_unclean <- teams_shots(
+bucks_shots_14_unclean <- teams_shots(
   teams = "Milwaukee Bucks",
   team_ids = NULL,
   all_active_teams = F,
   season_types = "Regular Season",
-  seasons = 2018,
+  seasons = 2014,
   measures = "FGA",
   periods = 0,
   months = 0,
@@ -126,47 +78,74 @@ bucks_shots_18_unclean <- teams_shots(
   nest_data = F,
   return_message = T
 ) 
-bucks_shots_18 <- bucks_shots_18_unclean %>% select("isShotMade", "locationX", "locationY", "yearSeason")
+bucks_shots_14 <- bucks_shots_14_unclean %>% select("isShotMade", "locationX", "locationY", "yearSeason")
 
-bucks_shots_list <- list(bucks_shots_23, bucks_shots_22, bucks_shots_21, bucks_shots_20, bucks_shots_19, bucks_shots_18)
+bucks_shots_09_unclean <- teams_shots(
+  teams = "Milwaukee Bucks",
+  team_ids = NULL,
+  all_active_teams = F,
+  season_types = "Regular Season",
+  seasons = 2009,
+  measures = "FGA",
+  periods = 0,
+  months = 0,
+  date_from = NA,
+  date_to = NA,
+  nest_data = F,
+  return_message = T
+) 
+bucks_shots_09 <- bucks_shots_09_unclean %>% select("isShotMade", "locationX", "locationY", "yearSeason")
 
-bucks_shots_all <- reduce(bucks_shots_list, full_join, by = colnames(bucks_shots_23))
+
+bucks_shots_list <- list(bucks_shots_24, bucks_shots_19, bucks_shots_14, bucks_shots_09)
+
+bucks_shots_all <- reduce(bucks_shots_list, full_join, by = colnames(bucks_shots_24))
  bucks_shots_all$yearSeason <- as.factor(bucks_shots_all$yearSeason)
 ```
 ```{r}
 library(sportyR)
+library(ggdark)
 
 bball_court <- geom_basketball("nba", x_trans = 43, rotation = 90, display_range = "defense")
 
 bball_court + 
-geom_point(data = bucks_shots_all, size = .3, alpha = .5, aes(locationX/10, locationY/10, color = isShotMade)) + 
+geom_point(data = bucks_shots_all, size = .3, alpha = .2, aes(locationX/10, locationY/10, color = isShotMade)) + 
   scale_colour_manual(values = c( "#8B0000", "#006400"), labels = c("Missed Shots", "Made Shots")) + 
   
   labs(
-    title = "Milwaukee Bucks Shoting Patterns",
+    title = "Milwaukee Bucks Shoting Patterns Over Time",
     x = "X Location",
     y = "Y Location",
     color = "Shot Outcome"
-  ) + scale_x_reverse() + facet_wrap(~ yearSeason) + guides(color = guide_legend(override.aes = list(size = 4)))
+  ) + scale_x_reverse() + facet_wrap(~ yearSeason) + guides(color = guide_legend(override.aes = list(size = 4, alpha = 1))) + dark_theme_classic() +  theme(axis.line = element_blank(),
+        axis.text = element_blank(),
+        axis.ticks = element_blank(),
+        axis.title = element_blank())
 ```
 
 ```{r}
-bucks_shots <- bucks_shots_full %>% select("isShotMade", "locationX", "locationY")
-
- ggplot(bucks_shots, aes(x = locationX, y = locationY, color = factor(isShotMade))) +
-  geom_point() + scale_x_reverse() +
-  scale_color_manual(values = c("FALSE" = "red", "TRUE" = "green")) +  
-  labs(
-    title = "Milwaukee Bucks Shot Locations",
-    x = "X Location",
-    y = "Y Location",
-    color = "Shot Success"
-  )
-  geom_point(data = bucks_shots_all, size = .3, alpha = .5, aes(locationX/10, locationY/10, color = isShotMade)) + 
-  scale_colour_manual(values = c( "#8B0000", "#006400"), labels = c("Missed Shots", "Made Shots"))
-```
-```{r}
-
+bucks_shots_23 <- teams_shots(
+  teams = "Milwaukee Bucks",
+  team_ids = NULL,
+  all_active_teams = F,
+  season_types = "Regular Season",
+  seasons = 2023,
+  measures = "FGA",
+  periods = 0,
+  months = 0,
+  date_from = NA,
+  date_to = NA,
+  nest_data = F,
+  return_message = T)
+salaries <- hoopshype_salaries(
+  teams = NULL,
+  all_teams = TRUE,
+  assume_player_opt_out = T,
+  assume_team_doesnt_exercise = T,
+  nest_data = F,
+  return_message = TRUE
+)
+print(bucks_shots_23)
 ```
 
 
@@ -187,39 +166,59 @@ bucks_shots <- bucks_shots_full %>% select("isShotMade", "locationX", "locationY
 1. (30 points) Produce a graphic displaying the shot locations for a particular team over several years. Some notes:
 
    - Colors should be chosen to reflect the team, if possible.
+   
    - There are likely many overlaid points -- handle this by either binning these by location, or use opacity.
+   
    - Incorporate information about whether the shot was made or not (shape, color, etc.).
+   
    - The graphic should be well-labeled, titled, etc.
+   
    - Start with a graph for a single year, then extend to several years. Up to 20 years of shot data is available. Either facet these by year or animate using the years.
+   
    - You'll want to figure out what the coordinates mean somehow. This might be through the documentation, but could also be determined using aspects of the data itself and the dimensions of an NBA court.
+   
     - Put a basketball court on the background of the image (you'll need to scale it appropriately).
     
+    Done
    
 2. (30 points) Summarize the graphic/series of graphics into a digestible, bullet-point brief report for front-office staff. Some notes:
 
    - The main body of the report should be very brief -- just the graphic(s) and the bullet-pointed list of findings, which should be short and clear.
+   
    - Include a more detailed explanation of these bullet points, for further reading by those interested. This section should follow the bullet-point section, but should be organized similarly for reference. 
+   
    - Your report to the front-office shouldn't include any code.
+   
    - This report should be generated using RMarkdown. However, the choice of output type (Word, PDF, or HTML) is up to you (you could even make slides if you want to). 
    
 3. (30 points) Write and document clean, efficient, reproducible code. Some notes:
 
    - This code will be viewed by your direct supervisor.
+   
    - The code file should include your code to gather, join, and clean the data; the code to generate the graphic(s) presented; and your commentary on the results (so, a single .rmd file, or an .rmd file that sources an .r file).
+   
    - Your code should be clean, organized, and reproducible. Remove unnecessary/scratch/exploratory code.
+   
    - Your code should be well commented. In particular, any decisions or judgement calls made in the analysis process should be explained/justified. Sections of code should be identified even if not functionalized (including purpose, data/argument inputs, analysis outputs).
    
 4. (10 points) Above and Beyond. Choose either option below. You are welcome to explore both, but only one is required. 
 
-Ideas: compare salary, best performance
-
   - Option 1: Explore the data a bit, and create a graphic that uses (or incorporates) different information than what was used above. Some notes:
     - Create an additional graphic that incorporates at least one additional variable not previously used (this should add to the graphic in part 1). The additional data should be drawn from a different dataset (function call) than the original graphic used. These two (or more) datasets may need to be joined appropriately.
+    
     - You can either add more information to the plot above, or create a different plot. 
+    
      - Formatting, labelling, etc. are all important here too.
+     
     - Adding marginal densities or other "bells and whistles" might offer additional insight.
+    
     - This graphic should be included at the end of the report (after the more detailed explanations). 
+    
      - You should include a brief description of the graphic (highlighting the different/additional information used).
+     
+     
+     
+     
   - Option 2: If the NBA were to incorporate a 4-point shot, where would you draw a 4-point arc? Some notes:
     - You likely should base your decision at least partly on proportion of shots made from a given range. You might consider an expected value calculation here.
     - Your arc can be shaped as you see fit; simple arcs are sufficient for this exploration.
